Tue Sep  4 07:08:30 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Fixed a unicode error in teh Win32 builds. Acted as
	  a dumbo when I made this change yesterday:(

Mon Sep  3 20:08:25 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp: Fixed a warning in TRU 64 builds.

Mon Sep  3 09:58:32 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* */Makefile: Updated dependencies 

Mon Sep  3 09:44:46 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Fixed a warning in Implicit
	  template builds.

Mon Sep  3 08:21:36 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Replaced L with ACE_TEXT_WIDE.

Mon Sep  3 07:54:32 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/OS_String.cpp: Fixed compile errors in win32 builds. Thanks
	  to Johnny Willemsen for sending in patches for replacing L with
	  ACE_TEXT_WIDE.

Sun Sep  2 19:33:07 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Fixed a small problem with the
	  select reactor's notify () handling mechanism. This was more of
	  a problem with me not checking the while () loop condition
	  properly. This should fix most of the reactor problems seen in
	  the daily builds.

Sat Sep  1 14:10:08 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/System_Time.cpp,
	* ace/Stream_Modules.cpp,
	* ace/Service_Types.cpp,
	* ace/Service_Manager.cpp,
	* ace/SPIPE_Addr.cpp,
	* ace/OS.cpp,
	* ace/Memory_Pool.cpp,
	* ace/Mem_Map.cpp,
  	* ace/Local_Name_Space_T.cpp,
	* ace/FILE_Addr.cpp,
	* ace/FIFO.cpp,
	* ace/Connector.cpp,
	* ace/Acceptor.cpp,
	* ace/Token_Collection.cpp,
	* ace/Name_Request_Reply.cpp,
	* ace/Local_Tokens.cpp,
	* ace/ACE.cpp,
	* ace/Log_Record.cpp,
  	* ace/Log_Msg.cpp: Added the use of the new ACE_OS::strsncpy()
 	  method.  Thanks to Alain for reporting this.

	* ace/OS_String.{h,cpp}: Added a "safe" c string copy method: